[gd_scene load_steps=55 format=2]

[ext_resource path="res://abilities/orbital_loop.gd" type="Script" id=1]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/orbital_loop.png" type="Texture" id=2]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_06.png" type="Texture" id=3]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_30.png" type="Texture" id=4]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_31.png" type="Texture" id=5]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_29.png" type="Texture" id=6]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_13.png" type="Texture" id=7]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_33.png" type="Texture" id=8]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_28.png" type="Texture" id=9]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_40.png" type="Texture" id=10]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_19.png" type="Texture" id=11]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_00.png" type="Texture" id=12]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_34.png" type="Texture" id=13]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_38.png" type="Texture" id=14]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_47.png" type="Texture" id=15]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_48.png" type="Texture" id=16]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_03.png" type="Texture" id=17]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_32.png" type="Texture" id=18]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_26.png" type="Texture" id=19]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_23.png" type="Texture" id=20]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_24.png" type="Texture" id=21]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_18.png" type="Texture" id=22]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_37.png" type="Texture" id=23]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_45.png" type="Texture" id=24]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_02.png" type="Texture" id=25]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_43.png" type="Texture" id=26]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_39.png" type="Texture" id=27]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_11.png" type="Texture" id=28]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_35.png" type="Texture" id=29]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_36.png" type="Texture" id=30]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_15.png" type="Texture" id=31]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_16.png" type="Texture" id=32]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_05.png" type="Texture" id=33]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_27.png" type="Texture" id=34]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_25.png" type="Texture" id=35]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_21.png" type="Texture" id=36]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_08.png" type="Texture" id=37]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_22.png" type="Texture" id=38]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_42.png" type="Texture" id=39]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_20.png" type="Texture" id=40]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_44.png" type="Texture" id=41]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_12.png" type="Texture" id=42]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_41.png" type="Texture" id=43]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_46.png" type="Texture" id=44]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_01.png" type="Texture" id=45]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_04.png" type="Texture" id=46]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_17.png" type="Texture" id=47]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_49.png" type="Texture" id=48]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_14.png" type="Texture" id=49]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_10.png" type="Texture" id=50]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_07.png" type="Texture" id=51]
[ext_resource path="res://external/aseprite/abilities/orbital_loop/aseprite_frames/orbital_loop_09.png" type="Texture" id=52]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 45 ), ExtResource( 25 ), ExtResource( 17 ), ExtResource( 46 ), ExtResource( 33 ), ExtResource( 3 ), ExtResource( 51 ), ExtResource( 37 ), ExtResource( 52 ), ExtResource( 50 ), ExtResource( 28 ), ExtResource( 42 ), ExtResource( 7 ), ExtResource( 49 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 47 ), ExtResource( 22 ), ExtResource( 11 ), ExtResource( 40 ), ExtResource( 36 ), ExtResource( 38 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 35 ), ExtResource( 19 ), ExtResource( 34 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 18 ), ExtResource( 8 ), ExtResource( 13 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 23 ), ExtResource( 14 ), ExtResource( 27 ), ExtResource( 10 ), ExtResource( 43 ), ExtResource( 39 ), ExtResource( 26 ), ExtResource( 41 ), ExtResource( 24 ), ExtResource( 44 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 48 ) ],
"loop": true,
"name": "default",
"speed": 30.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 128.0

[node name="orbital_loop" type="Node2D"]
z_index = -1
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
offset = Vector2( -1, 0 )

[node name="animated_sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 4, 4 )
frames = SubResource( 1 )
frame = 1

[node name="gravity_well" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 6

[node name="collision_shape_2d" type="CollisionShape2D" parent="gravity_well"]
shape = SubResource( 2 )

[node name="life_time" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="tween" type="Tween" parent="."]
[connection signal="body_entered" from="gravity_well" to="." method="_on_gravity_well_body_entered"]
[connection signal="timeout" from="life_time" to="." method="_on_life_time_timeout"]
